fixes of spacing in portoflio section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -375,17 +375,32 @@ body {
     .animate-scroll {
         left: -20%;
     }
+    .portfolio-section {
+        margin-top: -13rem !important;
+        margin-bottom: -30rem;
+    }
 }
 
 @media screen and (max-width: 1400px) {
     .animate-scroll {
         left: -25%;
     }
+    .portfolio-section {
+        margin-top: -14rem !important;
+        margin-bottom: -30rem;
+    }
 }
 
 @media screen and (max-width: 1340px) {
     .animate-scroll {
         left: -30%;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .portfolio-section {
+        margin-top: -7rem !important;
+        margin-bottom: -30rem;
     }
 }
 
@@ -399,11 +414,19 @@ body {
     .animate-scroll {
         left: -40%;
     }
+    .portfolio-section {
+        margin-top: -7rem !important;
+        margin-bottom: -30rem;
+    }
 }
 
 @media screen and (max-width: 1140px) {
     .animate-scroll {
         left: -45%;
+    }
+    .portfolio-section {
+        margin-top: -8rem !important;
+        margin-bottom: -30rem;
     }
 }
 
@@ -425,6 +448,13 @@ body {
     }
 }
 
+@media screen and (max-width: 767px) {
+    .portfolio-section {
+        margin-top: -15rem !important;
+        margin-bottom: 8rem;
+    }
+}
+
 @media screen and (max-width: 740px) {
     .animate-scroll {
         left: -90%;
@@ -435,12 +465,14 @@ body {
     .animate-scroll {
         left: -120%;
     }
+    
 }
 
 @media screen and (max-width: 540px) {
     .animate-scroll {
         left: -150%;
     }
+    
 }
 
 @media screen and (max-width: 440px) {
@@ -453,7 +485,4 @@ body {
     .animate-scroll {
         left: -230%;
     }
-    /* .portfolio-section {
-        margin-top: 1000px;
-    } */
 }
